...
    <item
        android:id="@+id/navigation_myfavourites"
        android:icon="@drawable/healthcare"
        android:title="@string/title_myfavourites" />

    <item
        android:id="@+id/navigation_mylocation"
        android:icon="@drawable/map"
        android:title="@string/title_mylocations" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/setting"
        android:title="@string/title_settings" />

...
