...
    <string name="title_markets">Bazaars</string>
    <string name="title_island">"Islands &amp;" "\n" "Beaches"</string>
    <string name="title_foods">Foods</string>
    <string name="first_slide_titel">Explore Istanbul</string>

    <!--Alert Button Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_name">Enter the new name</string>
    <string name="edit">Edit</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="dil_secenegi">Choose Language</string>
...
    <string name="saved_toast">The Location saved</string>
    <string name="add_cancel_toast">Adding location canceled</string>
    <string name="already_exist_toast">is already exist</string>
    <string name="addlocation_question">Do you want to save this place</string>
    <string name="myhome">My Home</string>
    <string name="myairport">My Airport</string>
    <string name="myhotel">My Hotel</string>
    <string name="others">Others</string>
    <string name="delete">Delete</string>
    <!--Onboarding -->
    <string name="second_slide_titel">Find Destination</string>
    <string name="third_slide_titel">Get Information</string>
    <string name="fourth_slide_titel">Add Favourite List</string>
...
