...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mymap_fab"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="92dp"
        android:background="#882139"
        android:backgroundTint="#882139"
...
