...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="245dp"
                android:layout_height="49dp"
                android:layout_marginBottom="92dp"
                android:ems="10"
                android:hint="@string/new_name"
                android:inputType="textPersonName"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/editYes_button"
                android:layout_width="90dp"
                android:layout_height="39dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/radius"
                android:text="@string/yes"
...
